# Agni

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  add_m_prefix.py
.claude/: settings.local.json
.github/workflows/: build.yml
cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Agni.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Shaders.vcxproj  Shaders.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cmake_build/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  engine.vcxproj  engine.vcxproj.filters
shaders/glsl/: MeshFallback.frag  MeshFallback.frag.spv  MeshFallback.vert  MeshFallback.vert.spv  SkyboxFallback.frag  SkyboxFallback.vert  colored_triangle.frag  colored_triangle.frag.spv  colored_triangle.vert.spv  colored_triangle_mesh.frag  colored_triangle_mesh.vert  generate_fallback_arrays.py  gradient.comp  gradient.comp.spv  input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  raymarching.comp  raymarching.comp.spv  raymarching.glsl  sky.comp  sky.comp.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  skybox_fallback.frag.spv
src/: AgniEngine.cpp  AgniEngine.h  AgniEngine.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Components.hpp  Debug.hpp  Descriptors.cpp  Descriptors.h  Descriptors.hpp  FallbackShaders.cpp  FallbackShaders.hpp  Images.cpp  Images.h  Images.hpp  Initializers.cpp  Initializers.h  Initializers.hpp  Loader.cpp  Loader.hpp  Material.cpp  Material.hpp  Pipelines.cpp  Pipelines.h  Pipelines.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp  SwapchainManager.cpp  SwapchainManager.hpp  Texture.cpp  Texture.hpp  Types.hpp  VulkanTools.cpp  (+19 more)
